few changes to dev

--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
 
 <head>
-    <title>HTML5 basic features</title>
+    <title>HTML5 basics</title>
 </head>
 
 <body>
     <div>
-        <p>Do some stuff you lazy boy... </p>
-        <p>Great, it looks like you think like a monkey! May you code as one then?</p>
-        <p>So, a second commit done. Let's push the changes after that!</p>
+        <p><a href="featuresDetection.html">Detecting HTML5 features</a></p>
     </div>
 </body>
 
