--- a/featuresDetection.html
+++ b/featuresDetection.html
@@ -3,14 +3,16 @@
 
 <head>
     <title>HTML5 features Detection</title>
-    <script src="featuresDetection.js"><script>
-    <script src="modernizr.min.js"><script>
+    <script src="./scripts/modernizr.min.js"></script>
+    <script src="./scripts/featuresDetection.js"></script>
 </head>
 
 <body>
-    <div>
-        Some stuff...
+    <div id="features">
     </div>
+    <script>
+        printHTML5FeaturesAvailability();
+    </script>
 </body>
 
 </html>
