Module and Namespaces Pattern implemented
- Enclose functionalities within modules
- deacoplate var references on functions adding scope within module

--- a/featuresDetection.html
+++ b/featuresDetection.html
@@ -4,14 +4,15 @@
 <head>
     <title>HTML5 features Detection</title>
     <script src="./scripts/modernizr.min.js"></script>
+    <script src="./scripts/featuresPrinter.js"></script>
     <script src="./scripts/featuresDetection.js"></script>
 </head>
 
 <body>
     <div id="features">
     </div>
-    <script>
-        printHTML5FeaturesAvailability();
+    <script>        
+        Html5Basics.Features.Detection.printFeatures(document.getElementById('features'));
     </script>
 </body>
 
