Few Canvas functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div>
         <p><a href="featuresDetection.html">Detecting HTML5 features</a></p>
+        <p><a href="canvasDrawings.html">Canvas Drawings</a></p>
     </div>
 </body>
 
