--- a/canvasDrawings.html
+++ b/canvasDrawings.html
@@ -15,9 +15,10 @@
         var canvasNode = document.getElementById('drawingPane');
         Html5Basics.Drawing.CanvasDrawer.setCanvasElement(canvasNode);
         Html5Basics.Drawing.CanvasDrawer.drawRectangle(10, 10, 50, 100);
-
-        Html5Basics.Drawing.CanvasDrawer.drawRandomPencilPath(120, 120, 2, "blue");
+        Html5Basics.Drawing.CanvasDrawer.drawRandomPencilPath(100, 120, 2, "blue");
         Html5Basics.Drawing.CanvasDrawer.drawText(70, 26, "Hello World!", "bold 16px sans-serif")
+        Html5Basics.Drawing.CanvasDrawer.drawRectangleGradientLinear(300, 10, 180, 100);
+        Html5Basics.Drawing.CanvasDrawer.drawRectangleGradientRadial(300, 120, 300, 120, 50, 50);
     </script>
 </body>
 
