--- a/canvasDrawings.html
+++ b/canvasDrawings.html
@@ -19,6 +19,7 @@
         Html5Basics.Drawing.CanvasDrawer.drawText(70, 26, "Hello World!", "bold 16px sans-serif")
         Html5Basics.Drawing.CanvasDrawer.drawRectangleGradientLinear(300, 10, 180, 100);
         Html5Basics.Drawing.CanvasDrawer.drawRectangleGradientRadial(300, 120, 300, 120, 50, 50);
+        Html5Basics.Drawing.CanvasDrawer.drawImage("images/img1.png", 120, 300);
     </script>
 </body>
 
